<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="number_1">1</string>
	<string name="number_2">2</string>
	<string name="number_3">3</string>
	<string name="number_4">4</string>
	<string name="number_5">5</string>
	<string name="number_6">6</string>
	<string name="number_7">7</string>
	<string name="number_8">8</string>
	<string name="number_9">9</string>
	<string name="number_0">0</string>
	<string name="operator_plus">+</string>
	<string name="operator_sub">-</string>
	<string name="operator_mul">*</string>
	<string name="operator_divide">/</string>
	<string name="operator_CE">CE</string>
	<string name="operator_equal">=</string>
	<string name="invisibleText">Enter something</string>

</resources>
